fix: Better dark mode compatability

--- a/src/ducks/items/ItemCard.scss
+++ b/src/ducks/items/ItemCard.scss
@@ -55,6 +55,7 @@
 
   &-padding {
     padding: 0.5rem;
+    width: 100%;
   }
 
   &-content {
